refactor() adding littles changes (master)